--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/trello_group_one?currentS
 spring.datasource.username=postgres
 spring.datasource.password=123
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.open-in-view=false
 server.port=8080
